--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
     "react-slideshow-image": "^4.2.1",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.3",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
